force-app/main/default/objects/Payment_Application__c/Payment_Application__c.object-meta.xml
<CustomObject>
    <label>Payment Application</label>
    <nameField>
        <label>Payment Application Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>