force-app/main/default/objects/Payment_Application__c/fields/Invoice__c.field-meta.xml
<CustomField>
  <fullName>Invoice__c</fullName>
  <label>Invoice</label>
  <type>MasterDetail</type>
  <referenceTo>Invoice__c</referenceTo>
  <relationshipName>Invoice_Payment_Applications</relationshipName>
  <relationshipLabel>Payment Applications</relationshipLabel>
</CustomField>